<package format="2">
  <name>hybrid_astar</name>
  <version>0.1.0</version>
  <description>
    Extended Hybrid A* path planning package based on the original implementation by Karl Kurzer,
    with support for 3D motion planning and underwater vehicle navigation.
  </description>
  <maintainer email="tianyouyu9@163.com">Tianyou Yu</maintainer>
  <license>BSD</license>
  <author email="tianyouyu9@163.com">Tianyou Yu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>uuv_control_msgs</depend>
  <depend>tf</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_msgs</depend>
</package>
